config/instances/manuela-quickstart/messaging/messaging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manuela-quickstart-messaging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    argocd.argoproj.io/managed-by: openshift-gitops
