config/instances/manuela-quickstart/messaging/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
spec:
  host: messaging-manuela-quickstart-messaging.apps.cluster-jcr84.jcr84.sandbox748.opentlc.com
